--- a/showering_app/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/showering_app/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -34,7 +34,7 @@
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-              >Fetch data</a
+              >Last Showers</a
             >
           </li>
         </ul>
