--- a/showering_app/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/showering_app/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -1,6 +1,6 @@
-<h1 id="tableLabel">Shower Report</h1>
+<p class="table-label">Shower Report</p>
 
-<p>Look at your last showers</p>
+<p class="under-label">Look at your last showers</p>
 
 <p *ngIf="!report?.length"><em>Loading...</em></p>
 
