--- a/showering_app/ClientApp/src/app/home/home.component.css
+++ b/showering_app/ClientApp/src/app/home/home.component.css
@@ -1,11 +1,13 @@
 .card {
-    padding: 20px;
+    padding: 15px;
 }
 
 .card-title {
-    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    color: #0b3954;
+    font-family: 'Poppins', sans-serif;
 }
-
 .container {
     padding-left: 5%;
 }
