added authentification, authguard, updated ui nav + home, added delete option to list data

--- a/showering_app/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/showering_app/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -21,6 +21,10 @@
       <td>{{ report.body }}</td>
       <td>{{ report.shampoo }}</td>
       <td>{{ report.showerGel }}</td>
+      <td>
+        <!-- Delete button -->
+        <button  class="btn btn-danger btn-sm" (click)="deleteReport(report.id)">Delete</button>
+      </td>
     </tr>
   </tbody>
 </table>
