--- a/showering_app/ClientApp/src/app/counter/counter.component.html
+++ b/showering_app/ClientApp/src/app/counter/counter.component.html
@@ -1,7 +1,6 @@
-<h1>Counter</h1>
+<h1>Weekly Shower Counter</h1>
 
-<p>This is a simple example of an Angular component.</p>
-
-<p aria-live="polite">Current count: <strong>{{ currentCount }}</strong></p>
-
-<button class="btn btn-primary" (click)="incrementCounter()">Increment</button>
+<div class="card total-showers-counter">
+  <p>You took: {{ currentCount }} showers this last week.</p>
+  <p>{{ message }} <img width="80px" height="80px" src="/assets/images/happy-sun.png" alt=""></p>
+</div>
